// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileField/> render() should display loading when loading 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          alt="file preview"
          src="value"
        />
      </div>
      <ForwardRef
        intent="secondary"
        isDisabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          <i
            className="material-icons md-spin mr-2"
          >
            refresh
          </i>
          Uploading...
        </span>
      </ForwardRef>
      <Input
        className="input"
        disabled={true}
        id="id-input-1"
        innerRef={
          Object {
            "current": null,
          }
        }
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</FormGroup>
`;

exports[`<FileField/> render() should not render preview 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <ForwardRef
        intent="secondary"
        isDisabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Select a File...
        </span>
      </ForwardRef>
      <Input
        className="input"
        disabled={false}
        id="id-input-1"
        innerRef={
          Object {
            "current": null,
          }
        }
        onChange={[Function]}
        previewUrl="url"
        type="file"
      />
    </div>
  </div>
</FormGroup>
`;

exports[`<FileField/> render() should render a basic file input 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          alt="file preview"
          src="value"
        />
      </div>
      <ForwardRef
        intent="secondary"
        isDisabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Select a File...
        </span>
      </ForwardRef>
      <Input
        className="input"
        disabled={false}
        id="id-input-1"
        innerRef={
          Object {
            "current": null,
          }
        }
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</FormGroup>
`;

exports[`<FileField/> render() should render preview 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          alt="file preview"
          src="value"
        />
      </div>
      <ForwardRef
        intent="secondary"
        isDisabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Select a File...
        </span>
      </ForwardRef>
      <Input
        className="input"
        disabled={false}
        id="id-input-1"
        innerRef={
          Object {
            "current": null,
          }
        }
        onChange={[Function]}
        previewUrl="url"
        type="file"
      />
    </div>
  </div>
</FormGroup>
`;
